# Cargo.toml

[package]
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
edition = "2021"
readme = "README.md"
name = "beacon"
version = "0.2.0"


[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0"
log = "0"


[build-dependencies]
build-data = "0.1"


[profile.release]
opt-level = 3
codegen-units = 1
lto = true

# EOF
