# Cargo.toml

[package]
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
edition = "2021"
readme = "README.md"
name = "beacon"
version = "1.0.0"


[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = { version = "0", features = ["log"] }
tracing-subscriber = "0"


[build-dependencies]
build-data = "0"


[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

# EOF
